data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1712.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\8e\80\80\80\00\01\04\6d\6f\64\42\05\66"
    "\75\6e\63\42\00\00\03\82\80\80\80\00\01\00\0a\91"
    "\80\80\80\00\01\8b\80\80\80\00\01\01\7f\20\00\04"
    "\40\10\00\0b\0b"
  )
""
)